# answer-it

./: .gitignore  LICENSE  NOTICE  README.md
backend/: .python-version  main.py  pyproject.toml
backend/data/: history.json  questions.json
backend/lib/: audio.py
frontend/: index.html  main.jsx  package-lock.json  package.json  practice.jsx
frontend/lib/: audio.js  theme.js  transcription-protocol.js  transcription.js  ui.jsx  wsProtocol.js
